[project]
name = "rlt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "smdsa1337",email = "smdsa1337@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "aiogram (>=3.23.0,<4.0.0)",
    "poetry-core (>=2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
